--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
                         <div class="carousel-caption d-md-block">
                             <div class="carousel-content">
                                 <h5 class="fw-semibold">Get Started Digital Learning</h5>
-                                <p>It is a long established fact that a reader will be distracted by the readable
-                                    content of
-                                    a page when looking at its layout.</p>
+                                <p>Create a successful and fulfilling career. We will teach you the in-demand skills you need to get there.</p>
                                 <button class="btn btn-info fw-semibold text-white border-0">Get Started</button>
                             </div>
                         </div>
@@ -83,9 +81,7 @@
                         <div class="carousel-caption d-md-block">
                             <div class="carousel-content">
                                 <h5 class="fw-semibold">Get Started Digital Learning</h5>
-                                <p>It is a long established fact that a reader will be distracted by the readable
-                                    content of
-                                    a page when looking at its layout.</p>
+                                <p>Create a successful and fulfilling career. We will teach you the in-demand skills you need to get there.</p>
                                 <button class="btn btn-info fw-semibold text-white border-0">Get Started</button>
                             </div>
                         </div>
@@ -95,9 +91,7 @@
                         <div class="carousel-caption d-md-block">
                             <div class="carousel-content">
                                 <h5 class="fw-semibold">Get Started Digital Learning</h5>
-                                <p>It is a long established fact that a reader will be distracted by the readable
-                                    content of
-                                    a page when looking at its layout.</p>
+                                <p>Create a successful and fulfilling career. We will teach you the in-demand skills you need to get there.</p>
                                 <button class="btn btn-info fw-semibold text-white border-0">Get Started</button>
                             </div>
                         </div>
@@ -124,8 +118,7 @@
 
         <section class="container">
             <h1 class="text-center course-header fw-bold fs-1 pb-3">Discover Our Popular<br> Courses</h1>
-            <p class="text-center pb-5">It is a long established fact that a reader will be distracted by the
-                readable<br> content of a page when looking at its layout.
+            <p class="text-center pb-5">Learn from real professionals. Our educators are top-tier professionals <br> who will show you the everything they use in their own businesses.
             </p>
             <div class="cards d-flex flex-wrap justify-content-between row-gap-3 ">
                 <div class="card mb-3 rounded-3 course-card">
@@ -136,8 +129,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title fw-semibold ">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
+                                <p class="card-text">Learn the fundamental of UI/UX Design from professionals and build real-world projects.</p>
                                 <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
@@ -150,9 +142,8 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
+                                <h5 class="card-title fw-semibold">Javascript Basic to Advance</h5>
+                                <p class="card-text">Modern Javascript course for begginer and advance learnes which covers everything.</p>
                                 <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
@@ -165,9 +156,8 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
+                                <h5 class="card-title fw-semibold">Fullstack Web Development</h5>
+                                <p class="card-text">Complete Web development course to learn from scratch and in great detail from beginner to advanced.</p>
                                 <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
@@ -180,9 +170,8 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
+                                <h5 class="card-title fw-semibold">Digital Marketing</h5>
+                                <p class="card-text">The only Digital Marketing course you need to start a career as a digital marketer.</p>
                                 <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
@@ -195,9 +184,8 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
+                                <h5 class="card-title fw-semibold">Photography Basic Rules</h5>
+                                <p class="card-text">Learn how to take stunning photographs by mastering the phography rules.</p>
                                 <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
@@ -210,9 +198,8 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">Fundamental Of UI/UX Design</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card.</p>
+                                <h5 class="card-title fw-semibold">Motion Graphics</h5>
+                                <p class="card-text">Learn how to create amazing motion graphics and animate like a pro with this step-by-step course.</p>
                                 <p class="fw-semibold price">Price : 20$</p>
                             </div>
                         </div>
@@ -233,14 +220,9 @@
                 </div>
                 <div class="elearning-content p-4">
                     <h1 class="fw-bold pb-3 ">Explore The elearning Institute</h1>
-                    <p class="ellipsis-text">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or
-                        randomised wordswhich don't look even slightly believable. If you are going
-                        to use a passage of Lorem Ipsum, you need to be sure.
+                    <p class="ellipsis-text">Our modern elearning platform helps instructors and learers share their knowledges all over the world. Whether you want to learn or to share what you know, you have come to the right place. As a global destination for online learning, we empower organizations and individuals with flexible and effective skill development. 
                     </p>
-                    <p class="d-none d-lg-block ">Anything embarrassing hidden in the middle of text. All the Lorem
-                        Ipsum
-                        generators on the Internet tend to repeat predefined.
+                    <p class="d-none d-lg-block ">Our global community and our course catalog get bigger every day. Check out our latest numbers as of 2022.
                     </p>
                     <div class="statistics pt-2">
                         <div>
@@ -270,8 +252,8 @@
                 class="ready-to-join text-white d-flex flex-wrap justify-content-around  align-items-center p-5 rounded ">
                 <div class="join-content">
                     <h1>Ready to join?</h1>
-                    <p>It is a long established fact that a reader will be distracted by the.<br>
-                        readable content of a page when looking at its layout.
+                    <p>Join us to Boost Your Career. You have come to the right place. <br>
+                        Register today and get started your dream career with us.
                     </p>
                 </div>
                 <div class="join-reg-btn d-inline-block rounded">
@@ -289,7 +271,7 @@
                                         aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <p class="text-black ">Get 25%OFF using coupon code "GET25".</p>
+                                    <p class="text-black ">Get 25%OFF using coupon code "GET25" at Checkout.</p>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary"
@@ -309,8 +291,7 @@
 
         <section class="container mt-5">
             <h1 class="fw-bold text-center pt-5 pb-3 ">Meet Our Successfull <br> Students</h1>
-            <p class="text-center pb-4 ">It is a long established fact that a reader will be distracted by the <br>
-                readable content of a page when looking at its layout.
+            <p class="text-center pb-4 ">Here are some of our successfull students who are leading the tech industry.
             </p>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
                 <div class="col">
@@ -359,8 +340,7 @@
 
         <section class="container mt-5">
             <h1 class="fw-bold text-center pt-5 pb-3 ">Some Students Feedback</h1>
-            <p class="text-center pb-4 ">It is a long established fact that a reader will be distracted by the <br>
-                readable content of a page when looking at its layout.
+            <p class="text-center pb-4 ">Here are feedbacks from some of the students. They tells about why they love learning from eduCare.
             </p>
             <div class="d-flex gap-3 feedback">
                 <div class="border rounded p-4">
@@ -374,10 +354,7 @@
                             <i class="fa-regular fa-star text-warning "></i>
                         </p>
                     </div>
-                    <p class="pt-4">There are many variations of passages of Lorem Ipsum available, but
-                        the majority have suffered alteration in some form, by injected
-                        humour, or randomised words which don't look even slightly
-                        believable. If you are going to use a passage of Lorem.
+                    <p class="pt-4">Great course. Everthing is so in-datailed. Loved every minute of it. Learning with such soothing and calm vibes just does it for me. I totally recommend this course for anyone who wants to become a UI designer.
                     </p>
                     <div class="d-flex gap-3  align-items-start  ">
                         <img src="./images/student/student-5.png" width="55px" height="55px" alt="">
@@ -398,10 +375,7 @@
                             <i class="fa-regular fa-star text-warning "></i>
                         </p>
                     </div>
-                    <p class="pt-4">There are many variations of passages of Lorem Ipsum available, but
-                        the majority have suffered alteration in some form, by injected
-                        humour, or randomised words which don't look even slightly
-                        believable. If you are going to use a passage of Lorem.
+                    <p class="pt-4">Love it! Watching an experienced designer work and talk through their thoughts is super helpful. Content is really valuable , especially for people like me that haven't gotten to work under and learn from senior designers yet. Thank you so much!
                     </p>
                     <div class="d-flex gap-3  align-items-start ">
                         <img src="./images/student/student-6.png" width="55px" height="55px" alt="">
@@ -421,8 +395,7 @@
 
         <section class="container mt-5">
             <h1 class="fw-bold text-center pt-5 pb-3 ">Frequently Asked Questions</h1>
-            <p class="text-center pb-4 ">It is a long established fact that a reader will be distracted by the <br>
-                readable content of a page when looking at its layout.</p>
+            <p class="text-center pb-4 ">Here are some of the freequently asked questions and their answers.</p>
             <div class="accordion mx-auto " id="accordionPanelsStayOpenExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
@@ -510,10 +483,10 @@
                 Privacy Ploicy | Terms of use
             </p>
             <div class="social-icons d-flex justify-content-center gap-3 pb-5">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-linkedin-in"></i>
-                <i class="fa-brands fa-tiktok"></i>
+                <a class="text-white " href="#"><i class="fa-brands fa-facebook rounded-circle p-2"></i></a>
+                <a class="text-white" href="#"><i class="fa-brands fa-twitter rounded-circle p-2"></i></a>
+                <a class="text-white" href="#"><i class="fa-brands fa-linkedin-in rounded-circle p-2"></i></a>
+                <a class="text-white" href="#"><i class="fa-brands fa-tiktok rounded-circle p-2"></i></a>
             </div>
         </section>
     </footer>
