--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title fw-semibold">Javascript Basic to Advance</h5>
+                                <h5 class="card-title fw-semibold">Javascript Basic to Advanced</h5>
                                 <p class="card-text">Modern Javascript course for begginer and advance learnes which covers everything.</p>
                                 <p class="fw-semibold price">Price : 20$</p>
                             </div>
@@ -340,7 +340,7 @@
 
         <section class="container mt-5">
             <h1 class="fw-bold text-center pt-5 pb-3 ">Some Students Feedback</h1>
-            <p class="text-center pb-4 ">Here are feedbacks from some of the students. They tells about why they love learning from eduCare.
+            <p class="text-center pb-4 ">Here are feedbacks from some of the students. They tell about why they love learning from eduCare.
             </p>
             <div class="d-flex gap-3 feedback">
                 <div class="border rounded p-4">
